Wed Jul 22 13:21:33 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-exec.rb, n-exec.rb, file-place.rb: [SR#102] exec対応

Wed Jul 15 20:45:11 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-local-file-output.rb, local-file-output.rb,
	  n-local-file-output.rb; [SR#102] local-file-output対応
	* bhere.rb, nhere.rb: 余分なコメントを削除


Wed Jul 15 19:19:51 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, b-local-file-input.rb, local-file-input.rb,
	  file-place.rb: [SR#102] local-file-input対応
	* bhere.rb: バグがあった

Wed Jul 15 16:55:35 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, bjob.rb, b-group-by.rb, file-place.rb:
	  BJob#next_filterを each_assigned_filterに変更したのにともなう, 対
	  応
	
Tue Jul 14 14:47:43 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* hash-simple-hash.rb: モジュール名変更
	
Mon Jul 13 14:36:03 2009  Keiju Ishitsuka  <keiju@giant>

	* sample/lifegame/*.rb: 文字コードをuft-8に変換

Mon Jul 13 13:29:23 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-group-by.rb: [BUG#125] group-byのexportのnoの設定がおかしかった.

Fri Jul 10 16:06:31 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-group-by.rb, bjob.rb, controller.rb: [SR#102] group_byにバグが
	  あった.

Thu Jul  9 20:27:19 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* each-substream-mapper.rb: [SR#102] emap
	* binput.rb: ちょっと修正

Thu Jul  9 18:57:58 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bhere.rb, nhere.rb: [SR#102] here

Thu Jul  9 16:46:42 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* block-source.rb: BBlock.yeldをちょっと最適化
	* block-source.rb, conf.rb: CONF.BLOCK_USE_STDOUT 対応

Thu Jul  9 14:55:23 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-file-output.rb, bjob.rb, controller.rb, n-splitter.rb: debugコ
	  メントをはずした
	* n-group-by.rb, n-mod-group-by.rb, conf.rb: CONF.HASH_OPTIMIZE対応

Wed Jul  8 18:30:08 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, n-group-by.rb, n-mod-group-by.rb: [SR#102] mod_group_by対応
